--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,7 +4,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:pages="clr-namespace:LunaDraw.Pages"
-    Title="LunaDraw">
+    Title="LunaDraw"
+    Shell.BackgroundColor="Transparent">
 
     <ShellContent
         ContentTemplate="{DataTemplate pages:MainPage}"
