--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -28,7 +28,7 @@
                           Touch="OnTouch"
                           IgnorePixelScaling="False">
         <skiasharp:SKGLView.GestureRecognizers>
-          <TapGestureRecognizer Tapped="OnCanvasTapped" />
+          <TapGestureRecognizer Tapped="OnCanvasTapped"/>
         </skiasharp:SKGLView.GestureRecognizers>
       </skiasharp:SKGLView>
     </Grid>
@@ -60,22 +60,45 @@
                                      BindingContext="{Binding Source={x:Reference toolbarView}, Path=BindingContext}"/>
     </components:FlyoutPanel>
 
+    <!-- Navigation Control (Bottom Right) -->
+    <VerticalStackLayout AbsoluteLayout.LayoutBounds="1,1, -1, -1"
+                         AbsoluteLayout.LayoutFlags="PositionProportional"
+                         Margin="20"
+                         Spacing="10">
+
+      <!-- Zoom Controls -->
+      <HorizontalStackLayout Spacing="10"
+                             HorizontalOptions="End">
+        <Button Text="⟲"
+                Style="{StaticResource ZoomButtonStyle}"
+                Command="{Binding ResetZoomCommand}"
+                ToolTipProperties.Text="Reset Zoom"/>
+        <Button Text="-"
+                Style="{StaticResource ZoomButtonStyle}"
+                Command="{Binding ZoomOutCommand}"
+                ToolTipProperties.Text="Zoom Out"/>
+        <Button Text="+"
+                Style="{StaticResource ZoomButtonStyle}"
+                Command="{Binding ZoomInCommand}"
+                ToolTipProperties.Text="Zoom In"/>
+      </HorizontalStackLayout>
+
+      <!-- Mini Map -->
+      <Border Stroke="Gray"
+              StrokeThickness="1"
+              BackgroundColor="White"
+              HeightRequest="200"
+              WidthRequest="200">
+        <components:MiniMapView BindingContext="{Binding}"/>
+      </Border>
+
+    </VerticalStackLayout>
+
     <!-- Layer Control (Top Right) -->
-    <components:LayerControlView BindingContext="{Binding}" 
+    <components:LayerControlView BindingContext="{Binding}"
                                  AbsoluteLayout.LayoutBounds="1,0, -1, -1"
                                  AbsoluteLayout.LayoutFlags="PositionProportional"
                                  Margin="20"/>
 
-    <!-- Mini Map (Bottom Right) -->
-    <Border Stroke="Gray"
-            StrokeThickness="1"
-            BackgroundColor="White"
-            HeightRequest="200"
-            WidthRequest="200"
-            AbsoluteLayout.LayoutBounds="1,1, -1, -1"
-            AbsoluteLayout.LayoutFlags="PositionProportional"
-            Margin="20">
-        <components:MiniMapView BindingContext="{Binding}" />
-    </Border>
   </AbsoluteLayout>
 </ContentPage>
