--- a/Components/ShapesFlyoutPanel.xaml
+++ b/Components/ShapesFlyoutPanel.xaml
@@ -2,7 +2,9 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:components="clr-namespace:LunaDraw.Components"
-             x:Class="LunaDraw.Components.ShapesFlyoutPanel">
+             xmlns:viewModels="clr-namespace:LunaDraw.Logic.ViewModels"
+             x:Class="LunaDraw.Components.ShapesFlyoutPanel"
+             x:DataType="viewModels:ToolbarViewModel">
   <Border Background="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Gray800}}"
           Padding="12"
           StrokeShape="RoundRectangle"
